Small correction to slides

--- a/notebooks/03_SocialNetworkAnalysis.ipynb
+++ b/notebooks/03_SocialNetworkAnalysis.ipynb
@@ -241,6 +241,8 @@
     "1. The row of column indices indicate the node.    \n",
     "2. The **out degree** is the sum across the row of the association matrix.  \n",
     "3. The **in degree** is the sum across the columns of the association matrix.\n",
+    "4. The sparsity of the network compares the fraction of edges present vs. the number of edges in a fully connected graph. For a graph with $n$ nodes and $e$ edges we can measure sparsity,\n",
+    "   $$s = 1- \\frac{e}{n^2}$$\n",
     "\n",
     "Execute the code and examine the results."
    ]
@@ -257,7 +259,7 @@
     "out_degree = np.sum(simple_graph_array, axis=0).astype(int)\n",
     "in_degree = np.sum(simple_graph_array, axis=1).astype(int)\n",
     "n_nodes = len(simple_graph_array)\n",
-    "sparsity = np.sum(simple_graph_array)/n_nodes**2\n",
+    "sparsity = 1 - np.sum(simple_graph_array)/n_nodes**2\n",
     "print(f'The number of nodes: {n_nodes} and sparsity: {sparsity}')\n",
     "print(f'{pd.DataFrame({'In degree': in_degree, 'Out degree': out_degree}, index=range(1,n_nodes + 1))}')"
    ]
@@ -454,7 +456,7 @@
    "source": [
     "> **Exercise 3-03:** You will now compute and display the closeness centrality of the karate club graph by the following steps:   \n",
     "> 1. Compute the closeness centrality of the graph using the [networkx.algorithms.centrality.closeness_centrality](https://networkx.org/documentation/stable/search.html?q=closeness) function, setting the `distance='distance'` argument.  \n",
-    "> 2. Plot the closeness centrality of the graph using the `plot_centrality` function with the `size-1000` argument.  \n",
+    "> 2. Plot the closeness centrality of the graph using the `plot_centrality` function with the `size=1000` argument.  \n",
     "> 3. Print the centrality of the graph nodes. "
    ]
   },
@@ -1079,7 +1081,7 @@
    "id": "472d6cf7",
    "metadata": {},
    "source": [
-    "> Examine the graph noticing the partition of the graph. At first this partition seems odd. But, there might be an explanation. Do you see evidence that the third partition might be club members with no particularly stronger connection to either of the factions that split the club? To answer this question, look back at the k-core for $k=4$ and the betweenness centrality plots you created in exercises 06-4 and 06-8.     \n",
+    "> Examine the graph noticing the partition of the graph. At first this partition seems odd. But, there might be an explanation. Do you see evidence that the third partition might be club members with no particularly stronger connection to either of the factions that split the club? To answer this question, look back at the k-core for $k=4$ and the betweenness centrality plots you created in exercises 03-4 and 03-8.     \n",
     "> **End of exercise.**     "
    ]
   },
