Updated Assignment notebook to correct FAISS serarch bug

--- a/notebooks/05_InformationRetrieval.ipynb
+++ b/notebooks/05_InformationRetrieval.ipynb
@@ -610,7 +610,7 @@
    "source": [
     "Now we are ready to perform the query by the following steps.   \n",
     "1. The query embedding is L2 normalized.     \n",
-    "2. Hyperparameters of $k=10$ and $nprob=128$ are set.  \n",
+    "2. Hyperparameters of $k=100$ and $nprob=128$ are set.  \n",
     "3. The search is executed.     \n",
     "\n",
     "Execute the code."
@@ -630,8 +630,9 @@
    "source": [
     "faiss.normalize_L2(embeddings_test)\n",
     "\n",
-    "k=10\n",
-    "index_IVFL2_PQ.nprobe = 128\n",
+    "k=100\n",
+    "index_IVFL2_index = faiss.extract_index_ivf(index_IVFL2_PQ)\n",
+    "index_IVFL2_index.nprobe = 128\n",
     "%time dist, indx = index_IVFL2_PQ.search(embeddings_test[0,:].reshape(1,D), k=k)\n",
     "print(f\"Distance to results: {dist}\")\n",
     "print(f\"Index to results: {indx}\")"
@@ -685,7 +686,7 @@
     "\n",
     "results = movie_plots.loc[indx[0], ['Title', 'Plot']]\n",
     "results['Distance'] = dist[0]\n",
-    "print_movies_distances(results)"
+    "print_movies_distances(results.iloc[:10,:])"
    ]
   },
   {
@@ -726,7 +727,7 @@
     "Sample_query_embedded = model.encode(Sample_query)\n",
     "faiss.normalize_L2(Sample_query_embedded)\n",
     "\n",
-    "index_IVFL2_PQ.nprobe = 128\n",
+    "index_IVFL2_index.nprobe = 128\n",
     "%time dist, idx_query = index_IVFL2_PQ.search(Sample_query_embedded.reshape(1,D), k)\n",
     "\n",
     "results2 = movie_plots.loc[idx_query[0], ['Title', 'Plot']]\n",
@@ -897,7 +898,7 @@
     "\n",
     "query_index = movie_plots_test.index[0]\n",
     "scores = compute_scores(model_CrossEncoder, movie_plots_test.loc[query_index,'Plot'], results.loc[:,'Plot'])\n",
-    "scores"
+    "scores[:10]"
    ]
   },
   {
@@ -906,7 +907,7 @@
     "id": "mMTnxs_oNHQa"
    },
    "source": [
-    "As a final step, the code in the cell below adds the scores column to the data frame and performs a sort in descending order of distance to produce the reranked matches. Execute this code and examine the results."
+    "As a final step, the code in the cell below adds the scores column to the data frame and performs a sort in descending order of distance to produce and displayed the top 10 reranked matches. Execute this code and examine the results."
    ]
   },
   {
@@ -925,7 +926,7 @@
     "## Sort the results data frame based on assending scores\n",
     "results['Score'] = scores\n",
     "results.sort_values(by='Score', ascending=False, inplace=True)\n",
-    "results"
+    "results.iloc[:10,:]"
    ]
   },
   {
