Changed Google Doc to Google Drive

--- a/notebooks/05_InformationRetrieval.ipynb
+++ b/notebooks/05_InformationRetrieval.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "## Setup\n",
     "\n",
-    "In this section, you will perform the setup steps required to execute the remainder of this notebook. This notebook is intended to run in Google Colab using a GPU. Access to a [Google Docs](https://workspace.google.com/products/docs/) account is also required. If you are not familiar with working in Colab you can find a [quick start guide here](https://docs.google.com/document/d/1afPjc4IaeZzIqUAX20uBEk3Dt41pAP0Ebkpd53EJTaE/edit?tab=t.0).   \n",
+    "In this section, you will perform the setup steps required to execute the remainder of this notebook. This notebook is intended to run in Google Colab using a GPU. Access to a [Google Drive](https://workspace.google.com/products/drive/) account is also required. If you are not familiar with working in Colab you can find a [quick start guide here](https://docs.google.com/document/d/1afPjc4IaeZzIqUAX20uBEk3Dt41pAP0Ebkpd53EJTaE/edit?tab=t.0).   \n",
     "\n",
     "To configure the colab runtime environment click the Change runtime type under the Runtime menu tab. Select a GPU type for execution.   \n",
     "\n",
@@ -137,7 +137,7 @@
     "Before proceeding you must do the following:   \n",
     "1. Download the zipped data file from the [Wikipedia Movie Plots](https://www.kaggle.com/datasets/jrobischon/wikipedia-movie-plots) page.     \n",
     "2. Unzip the file.\n",
-    "3. Place the unzipped file in your Google Docs file system. You can place this file at the top level or in a directory.     \n",
+    "3. Place the unzipped file in your Google Drive file system. You can place this file at the top level or in a directory.     \n",
     "4. In the code cell below edit the `file_path` variable to match the location and name of your unzipped file. For example, if you file is named `wiki_movie_plots.csv` and is in a directory called `CSCIS108`, the full path name is `\"/content/drive/MyDrive/CSCIS109/wiki_movie_plots.csv\"`.\n",
     "\n",
     "With the foregoing steps completed, run the code in the cell below to load the file. You should see the 8 column names printed as a verification of the loading."
