--- a/notebooks/07_ClusterModel.ipynb
+++ b/notebooks/07_ClusterModel.ipynb
@@ -379,7 +379,9 @@
     "    sns.scatterplot(data=df, x='component1', y='component2', \n",
     "                    hue='cluster_assignments', style='left', \n",
     "                    markers=['o','^'], s=10, alpha=0.1, ax=ax);\n",
-    "    ax.legend(bbox_to_anchor=(1.02, 1), loc='upper left', borderaxespad=0)\n",
+    "    legend = ax.legend(bbox_to_anchor=(1.02, 1), loc='upper left', borderaxespad=0)\n",
+    "    for handle in legend.legend_handles:\n",
+    "        handle.set_alpha(1.0)  \n",
     "    ax.set_xlabel('component 1');\n",
     "    ax.set_ylabel('component 2');\n",
     "    ax.set_title('UMAP projection of cluster assignments for HR dataset');\n",
