Updated question 2 of Exercise 8-06

--- a/notebooks/08_DimensionalityReduction.ipynb
+++ b/notebooks/08_DimensionalityReduction.ipynb
@@ -881,7 +881,7 @@
    "source": [
     "> **Exercise 08-6:** Examine these plots. Notice how the clusters change in the embedding. Now answer the following questions:     \n",
     "> 1. How does changing the value of `n_neighbors` change the characteristics of the clusters shown in the embeddings plotted. Why is this behavior expected?          \n",
-    "> 2. How and for which plots does the display of the clusters on the embedding with different values of `min_dist`?  "
+    "> 2. How and for which plots does the display of the clusters on the embedding with different values of `min_dist`appear to be the most fragment the grouping of the members of the clusters?  "
    ]
   },
   {
