--- a/notebooks/04_EfficinetSimilaritySearch.ipynb
+++ b/notebooks/04_EfficinetSimilaritySearch.ipynb
@@ -49,85 +49,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oi8OMS5B-q_s",
-        "outputId": "676eb46f-6610-4ee0-e860-c74c360898c5"
+        "id": "oi8OMS5B-q_s"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/bin/bash: line 1: 3: No such file or directory\n",
-            "Requirement already satisfied: faiss-gpu-cu12 in /usr/local/lib/python3.12/dist-packages (1.12.0)\n",
-            "Requirement already satisfied: numpy<2 in /usr/local/lib/python3.12/dist-packages (from faiss-gpu-cu12) (1.26.4)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.12/dist-packages (from faiss-gpu-cu12) (25.0)\n",
-            "Requirement already satisfied: nvidia-cuda-runtime-cu12>=12.1.105 in /usr/local/lib/python3.12/dist-packages (from faiss-gpu-cu12) (12.6.77)\n",
-            "Requirement already satisfied: nvidia-cublas-cu12>=12.1.3.1 in /usr/local/lib/python3.12/dist-packages (from faiss-gpu-cu12) (12.6.4.1)\n",
-            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.12/dist-packages (1.7.2)\n",
-            "Requirement already satisfied: numpy>=1.22.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn) (1.26.4)\n",
-            "Requirement already satisfied: scipy>=1.8.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn) (1.16.2)\n",
-            "Requirement already satisfied: joblib>=1.2.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn) (1.5.2)\n",
-            "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn) (3.6.0)\n",
-            "Requirement already satisfied: pandas in /usr/local/lib/python3.12/dist-packages (2.2.2)\n",
-            "Collecting pandas\n",
-            "  Downloading pandas-2.3.3-cp312-cp312-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl.metadata (91 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m91.2/91.2 kB\u001b[0m \u001b[31m5.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: numpy>=1.26.0 in /usr/local/lib/python3.12/dist-packages (from pandas) (1.26.4)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.12/dist-packages (from pandas) (2.9.0.post0)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas) (2025.2)\n",
-            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas) (2025.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
-            "Downloading pandas-2.3.3-cp312-cp312-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl (12.4 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.4/12.4 MB\u001b[0m \u001b[31m102.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: pandas\n",
-            "  Attempting uninstall: pandas\n",
-            "    Found existing installation: pandas 2.2.2\n",
-            "    Uninstalling pandas-2.2.2:\n",
-            "      Successfully uninstalled pandas-2.2.2\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "google-colab 1.0.0 requires pandas==2.2.2, but you have pandas 2.3.3 which is incompatible.\n",
-            "dask-cudf-cu12 25.6.0 requires pandas<2.2.4dev0,>=2.0, but you have pandas 2.3.3 which is incompatible.\n",
-            "cudf-cu12 25.6.0 requires pandas<2.2.4dev0,>=2.0, but you have pandas 2.3.3 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0mSuccessfully installed pandas-2.3.3\n",
-            "Requirement already satisfied: tensorflow-datasets in /usr/local/lib/python3.12/dist-packages (4.9.9)\n",
-            "Requirement already satisfied: absl-py in /usr/local/lib/python3.12/dist-packages (from tensorflow-datasets) (1.4.0)\n",
-            "Requirement already satisfied: array_record>=0.5.0 in /usr/local/lib/python3.12/dist-packages (from tensorflow-datasets) (0.8.1)\n",
-            "Requirement already satisfied: dm-tree in /usr/local/lib/python3.12/dist-packages (from tensorflow-datasets) (0.1.9)\n",
-            "Requirement already satisfied: etils>=1.9.1 in /usr/local/lib/python3.12/dist-packages (from etils[edc,enp,epath,epy,etree]>=1.9.1; python_version >= \"3.11\"->tensorflow-datasets) (1.13.0)\n",
-            "Requirement already satisfied: immutabledict in /usr/local/lib/python3.12/dist-packages (from tensorflow-datasets) (4.2.2)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (from tensorflow-datasets) (1.26.4)\n",
-            "Requirement already satisfied: promise in /usr/local/lib/python3.12/dist-packages (from tensorflow-datasets) (2.3)\n",
-            "Requirement already satisfied: protobuf>=3.20 in /usr/local/lib/python3.12/dist-packages (from tensorflow-datasets) (5.29.5)\n",
-            "Requirement already satisfied: psutil in /usr/local/lib/python3.12/dist-packages (from tensorflow-datasets) (5.9.5)\n",
-            "Requirement already satisfied: pyarrow in /usr/local/lib/python3.12/dist-packages (from tensorflow-datasets) (18.1.0)\n",
-            "Requirement already satisfied: requests>=2.19.0 in /usr/local/lib/python3.12/dist-packages (from tensorflow-datasets) (2.32.4)\n",
-            "Requirement already satisfied: simple_parsing in /usr/local/lib/python3.12/dist-packages (from tensorflow-datasets) (0.1.7)\n",
-            "Requirement already satisfied: tensorflow-metadata in /usr/local/lib/python3.12/dist-packages (from tensorflow-datasets) (1.17.2)\n",
-            "Requirement already satisfied: termcolor in /usr/local/lib/python3.12/dist-packages (from tensorflow-datasets) (3.1.0)\n",
-            "Requirement already satisfied: toml in /usr/local/lib/python3.12/dist-packages (from tensorflow-datasets) (0.10.2)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (from tensorflow-datasets) (4.67.1)\n",
-            "Requirement already satisfied: wrapt in /usr/local/lib/python3.12/dist-packages (from tensorflow-datasets) (2.0.0)\n",
-            "Requirement already satisfied: einops in /usr/local/lib/python3.12/dist-packages (from etils[edc,enp,epath,epy,etree]>=1.9.1; python_version >= \"3.11\"->tensorflow-datasets) (0.8.1)\n",
-            "Requirement already satisfied: fsspec in /usr/local/lib/python3.12/dist-packages (from etils[edc,enp,epath,epy,etree]>=1.9.1; python_version >= \"3.11\"->tensorflow-datasets) (2025.3.0)\n",
-            "Requirement already satisfied: importlib_resources in /usr/local/lib/python3.12/dist-packages (from etils[edc,enp,epath,epy,etree]>=1.9.1; python_version >= \"3.11\"->tensorflow-datasets) (6.5.2)\n",
-            "Requirement already satisfied: typing_extensions in /usr/local/lib/python3.12/dist-packages (from etils[edc,enp,epath,epy,etree]>=1.9.1; python_version >= \"3.11\"->tensorflow-datasets) (4.15.0)\n",
-            "Requirement already satisfied: zipp in /usr/local/lib/python3.12/dist-packages (from etils[edc,enp,epath,epy,etree]>=1.9.1; python_version >= \"3.11\"->tensorflow-datasets) (3.23.0)\n",
-            "Requirement already satisfied: charset_normalizer<4,>=2 in /usr/local/lib/python3.12/dist-packages (from requests>=2.19.0->tensorflow-datasets) (3.4.4)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.12/dist-packages (from requests>=2.19.0->tensorflow-datasets) (3.11)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.12/dist-packages (from requests>=2.19.0->tensorflow-datasets) (2.5.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.12/dist-packages (from requests>=2.19.0->tensorflow-datasets) (2025.10.5)\n",
-            "Requirement already satisfied: attrs>=18.2.0 in /usr/local/lib/python3.12/dist-packages (from dm-tree->tensorflow-datasets) (25.4.0)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.12/dist-packages (from promise->tensorflow-datasets) (1.17.0)\n",
-            "Requirement already satisfied: docstring-parser<1.0,>=0.15 in /usr/local/lib/python3.12/dist-packages (from simple_parsing->tensorflow-datasets) (0.17.0)\n",
-            "Requirement already satisfied: googleapis-common-protos<2,>=1.56.4 in /usr/local/lib/python3.12/dist-packages (from tensorflow-metadata->tensorflow-datasets) (1.71.0)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install --upgrade numpy<3\n",
         "!pip install faiss-gpu-cu12\n",
@@ -1033,7 +959,7 @@
       },
       "source": [
         "> **Answers:**      \n",
-        "> 2. The difference is big in diffrent magnitude. the construction time grows exponentially while query time grows very slowly .This demonstrates that n logn complexity scales much worse than logn complexity. The n logn construction becomes prohibitively expensive for large datasets, while logn queries remain practical even at massive scale.\n",
+        "> 2. The difference is big, in diffrent magnitude. the construction time grows exponentially while query time grows very slowly .This demonstrates that n logn complexity scales much worse than logn complexity. The n logn construction becomes prohibitively expensive for large datasets, while logn queries remain practical even at massive scale.\n",
         "\n",
         "> 3. Yes, this should be possible in real time. According to the scalability analysis, it would only take roughly 2.53 times longer to query a KD-tree with 10 million samples than it would to query our present little dataset. If we assume that the current query takes milliseconds, obtaining the top 100 closest neighbors from 10 million instances should take less than 20 seconds, even with a 2.53x increase. The log n query complexity implies that once the tree is formed, you can search through even very large datasets quickly."
       ]
@@ -2580,8 +2506,8 @@
       "source": [
         "> **Answers:**\n",
         "> 1. The benchmark results compare the IVF approximate search against the exact flat index as ground truth, measuring what fraction of true nearest neighbors are correctly identified. The at k values represent how many of the top k neighbors we are  evaluating, and recall is always < 1 because the approximate IVF method uses Voronoi cell centroids rather than exact distances, inevitably missing some true nearest neighbors.      \n",
-        "> 2. When we raise the `n_prob`, the algorithm has to look for more Voronoi cells than simply the closest centroid. This makes the search space larger by include vectors that could be closer but were allocated to cells next to them.  This larger search makes it more likely that we wil locate the real closest neighbors that we would have missed if you simply looked in the single nearest Voronoi cell.       \n",
-        "> 3. When `n_prob` is higher, we have to search through more Voronoi cells for each query, which means we have to do more distance computations. Searching 16 cells takes a lot longer than searching simply 1 cell since each extra cell investigated adds to the computing load.    \n",
+        "> 2. When we raise the `n_prob`, the algorithm has to look for more Voronoi cells than simply the closest centroid. This makes the search space larger by include vectors that could be closer but were allocated to cells next to them.  This larger search makes it more likely that we wil locate the real closest neighbors that we would have missed if you simply looked in the single nearest Voronoi cell.       \n",
+        "> 3. When `n_prob` is higher, we have to search through more Voronoi cells for each query, which means we have to do more distance computations. Searching 16 cells takes a lot longer than searching simply 1 cell since each extra cell investigated adds to the computing load.    \n",
         "> 4. The inverted index predivides the data into Voronoi regions, allowing queries to search only inside a limited portion of the total vectors in those located in the adjacent cells.  The flat index must calculate distances to all 1 million vectors, while IVF often examines just a few thousand vectors each cell.\n",
         "> 5. we could increase nlist, the number of Voronoi cells. because additional cells make the search area smaller, which makes it less likely that comparable vectors will end up in different cells. Each cell has uniform vectors as there are more cells. This makes the centroid based approximation more accurate.          "
       ]
@@ -5011,15 +4937,15 @@
       "source": [
         "| Algorithm | Memory Used MB | Query Time S | Recall @20 | Recall @100 |\n",
         "| :-------- | :---------: | :--------: | :--------: | :---------: |\n",
-        "| Flat      |            |       |         |           |\n",
-        "| IVF, nprob = 1   |  |     |        |          |\n",
-        "| IVF, nprob = 8   |  |       |        |         |\n",
-        "| IVF, nprob = 16   | |       |        |          |\n",
-        "| PQ, m=8, nbits=8 |     |      |         |         |\n",
-        "|PQ, m=8, nbits=10 |    |      |       |          |\n",
-        "|PQ, m=32, nbits=8 |   |      |        |          |\n",
-        "|HSWN, m=8         |    |      |       |          |\n",
-        "|HSWN, m=16         |   |     |       |          |"
+        "| Flat      |    512        | 6.58      | 1.0        | 1.0          |\n",
+        "| IVF, nprob = 1   | 520.07 | 0.373    | 0.545       |  0.506        |\n",
+        "| IVF, nprob = 8   | 520.07  | 2.76      | 0.963       |   0.949   |\n",
+        "| IVF, nprob = 16   | 520.07 |     6.29  |      0.995  |   0.991     |\n",
+        "| PQ, m=8, nbits=8 |   8.13  |    3.87  |     0.348    |   0.424     |\n",
+        "|PQ, m=8, nbits=10 |  10.52  |    36.6  |     0.462  |     0.528     |\n",
+        "|PQ, m=32, nbits=8 |  32.13 |    16.9  |     0.735   |     0.772     |\n",
+        "|HSWN, m=8         |  592.57  |    0.066  |    0.608   |     0.413  |\n",
+        "|HSWN, m=16         |  656.26 |    0.121 |     0.686  |      0.483    |"
       ]
     },
     {
@@ -5042,10 +4968,10 @@
       },
       "source": [
         "> Answers:      \n",
-        "> 1.     \n",
-        "> 2.       \n",
-        "> 3.     \n",
-        "> 4.     "
+        "> 1. In similarity search algorithms, there is a clear three way trade off between how much memory is used, how long it takes to run a query, and how accurate the recall is. In general, algorithms that get higher recall use a lot more memory and take a lot longer to run queries. On the other hand, memory efficient algorithms like PQ versions. give up some memory performance.    \n",
+        "> 2. The PQ algorithm with m=8, nbits=10 has the longest query time at 36.6 seconds per query, with good memory efficiency but creating impractical performance due to the computational overhead of product quantization with higher bit precision.  \n",
+        "> 3.PQ algorithms require far less memory than other algorithms. PQ achieves memory efficiency by vector compression and quantization, which introduces approximation errors affecting accuracy and computational overhead, reducing recall performance and query times.    \n",
+        "> 4. HNSW algorithms have significantly lower query times  compared to other algos. The trade offs include much higher memory usage and slightly reduced recall compared to exact search, as HNSW achieves speed through its graph based hierarchical structure that enables efficient approximate nearest neighbor search at the cost of substantial memory overhead.    "
       ]
     },
     {
@@ -7096,8 +7022,8 @@
       "source": [
         "| Index combination | Memory Used MB | Query Time S | Recall @20 | Recall @100 |\n",
         "| :-------- | :---------: | :--------: | :--------: | :---------: |\n",
-        "| OPQ32,IMI2x8,PQ32     |        |     |       |         |\n",
-        "| OPQ32,IVF4096_HNSW,PQ32    |          |     |        |    |"
+        "| OPQ32,IMI2x8,PQ32     | 41       | 3.8    | 0.92      | 0.96        |\n",
+        "| OPQ32,IVF4096_HNSW,PQ32    | 43         | 1.4    | 0.95       |  0.98  |"
       ]
     },
     {
@@ -7122,12 +7048,12 @@
       },
       "source": [
         "> **Answers:**      \n",
-        "> 1.        \n",
-        "> 2.       \n",
-        "> 3.       \n",
-        "> 4.       \n",
-        "> 5.        \n",
-        "> 6.         "
+        "> 1. composite indices have better recall than most basic indices and use relatively little memory . They fill the gap between PQ memory efficiency and Flat perfect recall.        \n",
+        "> 2. Both composite indices use about the same amount of memory and have strong recall, although OPQ32,IVF4096_HNSW,PQ32 is much quicker and has somewhat higher recall performance.     \n",
+        "> 3. Coarse quantization narrows down the search space by prefiltering candidates. HNSW is better at navigating the network structure than IMI grid based method, which is why queries take less time.     \n",
+        "> 4. we can try increase the grid dims to improve recall, but this will use more memory and take longer to construct.       \n",
+        "> 5. For IVF_HNSW we can increase the number of clusters and the HNSW connectivity parameter m to improve recall, at the cost of increased memory and construction time.        \n",
+        "> 6. OPQ improves recall accuracy and memory efficiency by rotating vectors to optimize the subsequent quantization steps, that lead to reducing quantization errors.    "
       ]
     },
     {
